kafka/monitoring/prometheus-install/prometheus-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: prometheus
  namespace: database-migration
  labels:
    operated-prometheus: 'true'
spec:
  to:
    kind: Service
    name: prometheus-operated
    weight: 100
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
